Some work on slider on tablet and fixes on mobile

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -47,6 +47,7 @@
   @include md-size() {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 70px;
   }
 }
 
