--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,6 +24,7 @@ $light-grey-color: #f2f2f2;
 $grey-color-bababa: #bababa;
 $light-grey-color-darker: #ebebeb;
 $error-color: #ff8282;
+$slider-scale-color: #dcdcdc;
 
 $small-size: 320 * 1px;
 $medium-size: 768 * 1px;
